permal link test3

--- a/2020-08-20-about.md
+++ b/2020-08-20-about.md
@@ -1,5 +1,5 @@
 ---
 layout: page
 title: 关于
-permalink: "/move-forward/:year/:month/:day/:title"
+permalink: /move-forward/:year/:month/:day/:title
 ---
